<resources>
    <string name="app_name">Dokternak</string>

    <string name="label_login">LOGIN AKUN</string>
    <string name="label_welcome_back">Selamat Datang Kembali</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="label_account_availability">Belum punya akun ?</string>
    <string name="action_login">Masuk</string>
    <string name="action_register">Daftar Akun</string>
    <string name="menu_home">Home</string>
    <string name="menu_article">Artikel</string>
    <string name="menu_officer">Petugas</string>
    <string name="menu_puskeswan">Puskeswan</string>
    <string name="menu_profile">Profile</string>
    <string name="label_create_new_account">Buat Akun Baru</string>
    <string name="hint_fullname">Nama Lengkap</string>
    <string name="label_main_discovery">Temukan Petugas Kesehatan Hewan Dilingkungan Terdekat!</string>
    <string name="message_email_cant_empty">Email tidak boleh kosong</string>
    <string name="message_password_cant_empty">Password tidak boleh kosong</string>
    <string name="message_email_is_not_valid">Email tidak valid</string>
    <string name="error_something_wrong">Terjadi Kesalahan</string>
    <string name="label_see_all">Lihat Semua</string>
    <string name="label_newest_article">Artikel Terbaru</string>
    <string name="label_consult_with_doctor">Konsultasi dengan Petugas</string>
    <string name="message_name_cant_empty">Nama tidak boleh kosong</string>
    <string name="action_logout">Keluar</string>
    <string name="title_information">Informasi</string>
    <string name="message_logout_confirmation">Apakah anda yakin ingin keluar ?</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_email">Email</string>
    <string name="label_location">Tempat</string>
    <string name="label_phone">Telepon</string>
    <string name="label_address">Alamat</string>
    <string name="label_schedule">Jadwal</string>
    <string name="label_profile">Profile</string>
    <string name="label_hi">Hai !</string>
    <string name="action_edit_profile">Edit Profil</string>
    <string name="action_cancel">Batal</string>
    <string name="action_yes">Ya</string>
    <string name="label_write_new_consultation">Tulis Konsultasi</string>
    <string name="label_officer_name">Nama Petugas</string>
    <string name="hint_insert_officer_name">Masukkan Nama Petugas</string>
    <string name="label_livestock">Hewan Ternak</string>
    <string name="label_animal_category">Kategori Hewan</string>
    <string name="label_pet">Hewan Kesayangan</string>
    <string name="label_animal_name">Nama Hewan</string>
    <string name="hint_insert_animal_name">Masukkan Nama Hewan</string>
    <string name="label_animal_type">Jenis Hewan</string>
    <string name="action_send">Kirim</string>
    <string name="label_puskeswan">Puskeswan</string>
    <string name="label_puskeswan_name">Nama Puskeswan</string>
    <string name="label_puskeswan_address">Alamat Puskeswan</string>
    <string name="label_puskeswan_schedule">Jadwal</string>
    <string name="label_check_location">Cek Lokasi</string>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_name">Nama</string>
    <string name="label_phone_number">No Handphone/WhatsApp</string>
    <string name="label_male">Laki-laki</string>
    <string name="label_female">Perempuan</string>
    <string name="label_address_area">Alamat Kecamatan</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="warning_name_must_not_be_empty">Nama tidak boleh kosong</string>
    <string name="warning_email_must_not_be_empty">Email tidak boleh kosong</string>
    <string name="warning_phone_must_not_be_empty">No Telepon tidak boleh kosong</string>
    <string name="warning_address_must_not_be_empty">Alamat tidak boleh kosong</string>
    <string name="hint_insert_name">Masukkan Nama</string>
    <string name="hint_insert_email">Masukkan email</string>
    <string name="hint_insert_phone_number">Masukkan no handphone</string>
    <string name="hint_insert_address">Masukkan Alamat</string>
    <string name="label_complaint">Keluhan</string>
    <string name="hint_insert_complaint">Masukkan Keluhan</string>
    <string name="warning_officer_name_must_not_empty">Nama Petugas tidak boleh kosong</string>
    <string name="warning_animal_name_must_not_empty">Nama hewan tidak boleh kosong</string>
    <string name="warning_complaint_must_not_empty">Keluhan tidak boleh kosong</string>
    <string name="message_consultation_sent">Konsultasi berhasil dikirim</string>
    <string name="label_dont_have_any_messages">Anda belum memiliki konsultasi terkirim</string>
    <string name="label_animal_type_is">Jenis Hewan : %1$s</string>
    <string name="label_animal_name_is">Nama Hewan : %1$s</string>
    <string name="message_delete_consultation_confirmation">Apakah anda yakin ingin menghapus konsultasi ini ?</string>
    <string name="message_consultation_deleted">Konsultasi berhasil dihapus</string>
    <string name="message_search_not_found">Tidak ada hasil pencarian dengan kata kunci tersebut</string>
    <string name="desc_fab_to_add_new_consultation">fabToNewConsultation</string>
    <string name="message_edit_profile_success">Update profil berhasil</string>
</resources>