<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/pbEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <View
        android:id="@+id/bgDimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7000000"
        android:visibility="invisible"
        android:translationZ="1dp"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:layout_gravity="center"
            android:text="@string/label_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp">

            <TextView
                android:id="@+id/tvUserName"
                android:text="@string/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_name"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@id/tvUserName"/>

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

            <EditText
                android:id="@+id/edtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_email"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@id/tvUserEmail"/>

            <TextView
                android:id="@+id/tvUserPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone_number"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUserEmail" />

            <EditText
                android:id="@+id/edtUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_phone_number"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@id/tvUserPhone"/>

            <TextView
                android:id="@+id/tvUserGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone_number"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUserPhone" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvUserGender"
                tools:layout_editor_absoluteX="16dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/label_female" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvUserAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgGender" />

            <EditText
                android:id="@+id/edtUserAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_address"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                android:lines="8"
                app:layout_constraintTop_toBottomOf="@id/tvUserAddress"/>

            <Button
                android:id="@+id/btnEditProfile"
                android:text="@string/label_edit_profile"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@+id/edtUserAddress"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>