<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_write_new_consultation"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvOfficerNameLabel"
                android:text="@string/label_officer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/edtOfficerName"
                android:hint="@string/hint_insert_officer_name"
                android:textColorHint="@color/colorGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:padding="@dimen/dimen_16dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvOfficerNameLabel"/>

            <TextView
                android:id="@+id/tvPetCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/label_animal_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtOfficerName" />

            <RadioGroup
                android:id="@+id/rbAnimalCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvPetCategory"
                tools:layout_editor_absoluteX="16dp">

                <RadioButton
                    android:id="@+id/rbLiveStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_livestock" />

                <RadioButton
                    android:id="@+id/rbPet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/label_pet" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvAnimalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/label_animal_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbAnimalCategory" />

            <EditText
                android:id="@+id/edtAnimalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_animal_name"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@+id/tvAnimalName" />

            <TextView
                android:id="@+id/tvAnimalType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/label_animal_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAnimalName" />

            <ProgressBar
                android:id="@+id/pbCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAnimalType" />

            <Spinner
                android:id="@+id/spinnerAnimalType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:hint="@string/hint_insert_animal_name"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/tvAnimalType" />

            <TextView
                android:id="@+id/tvComplaintLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/label_animal_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAnimalType" />

            <EditText
                android:id="@+id/edtComplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_insert_animal_name"
                android:padding="@dimen/dimen_16dp"
                android:textColorHint="@color/colorGrey"
                android:lines="6"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@+id/tvComplaintLabel" />

            <Button
                android:id="@+id/btnSendConsultation"
                android:text="@string/action_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/edtComplaint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>